--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,10 @@
 <resources>
-	<string name="app_name">AdvancedRecyclerView</string>
+	<string name="app_name">Advanced Recycler View</string>
 	<string name="title_activity_main">MainActivity</string>
 
 	<string name="hello_world">Hello world!</string>
 	<string name="action_settings">Settings</string>
 	<string name="title_activity_auth">AuthActivity</string>
+	<string name="your_favourite_animal">"Your favourite animal is: "</string>
+
 </resources>
