--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,5 +6,8 @@
 	<string name="action_settings">Settings</string>
 	<string name="title_activity_auth">AuthActivity</string>
 	<string name="your_favourite_animal">"Your favourite animal is: "</string>
+	<string name="error_happened">Something went wrong!</string>
+	<string name="title">"Title: "</string>
+	<string name="artist">"Artist: "</string>
 
 </resources>
