--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,14 +1,15 @@
 <resources>
 	<string name="app_name">Advanced Recycler View</string>
-	<string name="title_activity_main">MainActivity</string>
 
-	<string name="hello_world">Hello world!</string>
 	<string name="action_settings">Settings</string>
 	<string name="title_activity_auth">AuthActivity</string>
-	<string name="your_favourite_animal">"Your favourite animal is: "</string>
+	<string name="your_favourite_animal">"Your favourite animal is: %1$s"</string>
+	<string name="your_sort_order">"Your sort order is: %1$s"</string>
 	<string name="error_happened">Something went wrong!</string>
 	<string name="title">"Title: "</string>
 	<string name="artist">"Artist: "</string>
 	<string name="action_staggered_grid">Use fancy grid</string>
+
+	<string name="sort_order_pref_default_value">1</string>
 
 </resources>
